Add new list option in list select options:  * listSelectOptionDirective to set newList scope variable and to toggle between add new and select existing list in view  * saveUnsavedListAndLinkToItem method in ListsController which is run prior saving item from omnibar or accordion  * duplicate lists scope variable to listSelectOptions in all combineListsArrays methods cases where lists exists  * isAddNewOption method in optionsDisabledDirective, clear ng-model view value when true  * toggle animation
Refactoring:
 * saveOmnibarText anonymous callback functions to named functions
 * optionsDisabledDirective

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -47,6 +47,7 @@
     <script src="static/common/pikadayDirective.js"></script>
     <script src="static/common/iscroll-probe.js"></script>
     <script src="static/common/loadingAnimationDirective.js"></script>
+    <script src="static/common/listsSelectOptionsDirective.js"></script>
     <script src="static/common/optionsDisabledDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
