--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -1,10 +1,23 @@
 <div id="taskCoreFields" class="swiper-no-swiping" data-snap-ignore="true">
-  <div class="form-group">
-    <label class="sr-only" for="taskList">list</label>
-    <select id="taskList" class="simple-input swiper-no-swiping" ng-model="task.relationships.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions" editable-field>
-      <option value="">select list...</option>
-    </select>
+
+  <div lists-select-options>
+    <div ng-if="!addNewListVisible" class="form-group select-list-visible-animation">
+      <label class="sr-only" for="taskList">list</label>
+      <select id="taskList" class="simple-input swiper-no-swiping" ng-model="task.relationships.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions" editable-field>
+        <option value="">select list...</option>
+      </select>
+    </div>
+
+    <div ng-if="addNewListVisible" class="form-group select-list-visible-animation">
+      <div class="left-input-wrapper">
+        <input type="text" class="left-input-wrapper simple-input" ng-model="newList.title" placeholder="add list..."/>
+      </div>
+      <div class="right-button-wrapper item-actions">
+        <a href class="smallest-font add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
+      </div>
+    </div>
   </div>
+
   <div ng-show="contexts.length" class="form-group">
     <label class="sr-only" for="taskContext">context</label>
     <select id="taskContext" class="simple-input swiper-no-swiping" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" editable-field>
