--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -35,10 +35,10 @@
     <div class="row col-md-12 separator-small"></div>
 
     <div class="row">
-      <div class="col-md-6 col-md-push-6 phone">
+      <div class="col-md-5 col-md-push-7 phone">
         <img class="hide-mobile" src="img/phone-empty.png"/>
       </div>
-      <div class="col-md-6 col-md-pull-6 lean-center">
+      <div class="col-md-7 col-md-pull-5 lean-center">
         <p>
           <img src="logoname.png"/>
           <br/>
@@ -63,10 +63,10 @@
     <div class="row col-md-12 separator"></div>
 
     <div class="row">
-      <div class="col-md-5 phone">
+      <div class="col-md-4 phone">
         <img src="img/phone-inbox.png"/>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-8">
         <h2>simple</h2>
         <p>manage what you want to do or remember<br/>
           &hellip;as intuitively as remembering it<br/>
@@ -103,10 +103,10 @@
     <div class="row col-md-12 separator"></div>
 
     <div class="row">
-      <div class="col-md-5 phone">
+      <div class="col-md-4 phone">
         <img src="img/phone-snooze.png"/>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-8">
         <h2>focused</h2>
         <p>focus on the essential<br/>
           &hellip;when you want to get things done<br/>
@@ -139,10 +139,10 @@
     <div class="row col-md-12 separator"></div>
 
     <div class="row">
-      <div class="col-md-5 phone">
+      <div class="col-md-4 phone">
         <img src="img/phone-notes.png"/>
       </div>
-      <div class="col-md-7">
+      <div class="col-md-8">
         <h2>notes</h2>
         <p>notes are things you want to remember<br/>
           &hellip;organize by topic<br/>
@@ -170,15 +170,23 @@
     <div class="row col-md-12 separator"></div>
 
     <div class="row">
-      <div class="col-md-6 col-md-offset-2 lean-center">
+      <div class="col-md-12 lean-center">
         <h2>science-driven design</h2>
         <p class="last-paragraph">thousands of research papers used to validate the
         most focused, intuitive ui and data management
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
-        <a href="https://ext.md/launch" class="button"><span>sign up</span></a><br/>
+        <a href="https://ext.md/launch" class="button"><span>sign up now</span></a><br/>
         </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator-small"></div>
+
+    <div class="row">
+      <div class="col-md-12 lean-center">
+        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
       </div>
     </div>
 
