Changed link color to match button

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <div class="page-header">
+  <div class="page-header links">
     <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
   </div>
 
@@ -185,7 +185,7 @@
     <div class="row col-md-12 separator-small"></div>
 
     <div class="row">
-      <div class="col-md-12 lean-center">
+      <div class="col-md-12 lean-center links">
         <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
       </div>
     </div>
