More airy layout, copy fixes

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -38,7 +38,7 @@
       <div class="col-md-5 col-md-push-7 phone">
         <img class="hide-mobile" src="img/phone-empty.png"/>
       </div>
-      <div class="col-md-7 col-md-pull-5 lean-center">
+      <div class="col-md-6 coll-md-offset-1 col-md-pull-5 lean-center">
         <p>
           <img src="logoname.png"/>
           <br/>
@@ -55,7 +55,7 @@
           as if it was an extension to your biological mind.
         </p>
         <p>
-          it is <b>simple</b>, <b>focused</b> and <b>fast</b>.
+          it is <b>simple</b>, <b>fast</b> and <b>focused</b>.
         </p>
       </div>
     </div>
@@ -73,8 +73,8 @@
           &hellip;now, tomorrow or in three years
         </p>
         <p class="details">
-          the conscious mind can process only about 40 bits of<br/>
-          information in a second (Zimmermann 1989)
+          the conscious mind can process only about 40 bits<br/>
+          of information in a second (Zimmermann 1989)
         </p>
       </div>
     </div>
@@ -172,8 +172,8 @@
     <div class="row">
       <div class="col-md-12 lean-center">
         <h2>science-driven design</h2>
-        <p class="last-paragraph">thousands of research papers used to validate the
-        most focused, intuitive ui and data management
+        <p class="last-paragraph">thousands of research papers used to validate
+        very focused, intuitive ui and data management
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
