--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -38,7 +38,7 @@
       <div class="col-md-5 col-md-push-7 phone">
         <img class="hide-mobile" src="img/phone-empty.png"/>
       </div>
-      <div class="col-md-6 coll-md-offset-1 col-md-pull-5 lean-center">
+      <div class="col-md-7 col-md-pull-5 lean-center">
         <p>
           <img src="logoname.png"/>
           <br/>
