--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -69,7 +69,7 @@
       <div class="col-md-8">
         <h2>simple</h2>
         <p>manage what you want to do or remember<br/>
-          &hellip;as intuitively as remembering it<br/>
+          &hellip;as intuitively as recalling it<br/>
           &hellip;now, tomorrow or in three years
         </p>
         <p class="details">
