Fixed omnibar scroll problems with long texts in content/description

--- a/frontend/cordova/app/merges/ios/index.html
+++ b/frontend/cordova/app/merges/ios/index.html
@@ -44,6 +44,7 @@
     function onDeviceReady() {
       // Now safe to use device APIs
       cordova.plugins.Keyboard.hideKeyboardAccessoryBar(true);
+      cordova.plugins.Keyboard.disableScroll(true);
     }
 
   </script>
