--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div ng-if="!isSearchActive() && !omnibarKeywords.isVisible" class="omnibar-empty-search-placeholder" ng-click="hideEmptyOmnibar()"></div>
+      <div ng-if="!isSearchActive() && !omnibarKeywords.isVisible" class="omnibar-empty-search-placeholder" ng-click="hideEmptyOmnibar()" ng-style="{maxHeight: getSearchPlaceholderMaxHeight()}"></div>
 
       <div ng-if="isSearchActive() && !omnibarKeywords.isVisible && !isLoading">
         <div ng-show="filteredItems.length" class="filtered-items">
@@ -104,45 +104,50 @@
 
     </div>
 
-    <div ng-switch-when="task">
-      <form class="form-horizontal" role="form" name="taskEdit" editable-field-container>
-        <div class="form-group">
-          <div ng-if="showDateInput">
-            <label for="taskDue" class="sr-only">select date...</label>
-            <input type="date" id="taskDue" class="simple-input" date-input-blur="hideDate" ng-model="task.date" date-input="task" date-input-set-focus="focusDateInput">
+    <div ng-switch-when="task" class="omnibar-task">
+      <span ng-if="hideTaskProperties()" class="show-more">more</span>
+
+      <form role="form" name="taskEdit" editable-field-container>
+        <div ng-hide="hideTaskProperties()">
+          <div class="form-group">
+            <div ng-if="showDateInput">
+              <label for="taskDue" class="sr-only">select date...</label>
+              <input type="date" id="taskDue" class="simple-input" date-input-blur="hideDate" ng-model="task.date" date-input="task" date-input-set-focus="focusDateInput">
+            </div>
+            <div ng-if="!showDateInput" class="item-actions">
+              <span class="simple-input default-element date-input-placeholder" ng-click="focusDate()">select date...</span>
+            </div>
           </div>
-          <div ng-if="!showDateInput" class="item-actions">
-            <span class="simple-input default-element date-input-placeholder" ng-click="focusDate()">select date...</span>
+          <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
+          <div ng-if="task.date" class="form-group">
+            <label class="sr-only" for="taskRepeat">repeating</label>
+            <select id="taskRepeat" class="simple-input" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes" editable-field>
+              <option value="">select repeating...</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label class="sr-only" for="taskLink">url</label>
+            <input type="text" id="taskLink" class="simple-input" ng-model="task.link" placeholder="url..." editable-field>
           </div>
         </div>
-        <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
-        <div ng-if="task.date" class="form-group">
-          <label class="sr-only" for="taskRepeat">repeating</label>
-          <select id="taskRepeat" class="simple-input" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes" editable-field>
-            <option value="">select repeating...</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="taskLink">url</label>
-          <input type="text" id="taskLink" class="simple-input" ng-model="task.link" placeholder="url..." editable-field>
-        </div>
-        <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
+        <div id="task-description-container" class="form-group omnibar-scroll-container" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
           <label class="sr-only" for="taskDescription">description</label>
-          <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" msd-elastic editable-field></textarea>
+          <textarea id="taskDescription" class="simple-input" ng-model="task.description" placeholder="description..." maxlength="1024" msd-elastic editable-field ng-focus="taskDescriptionFocus()" ng-blur="taskDescriptionBlur()"></textarea>
         </div>
       </form>
     </div>
 
-    <div ng-switch-when="note">
+    <div ng-switch-when="note" class="omnibar-note">
+
+      <span ng-if="hideNoteProperties()" class="show-more">more</span>
 
       <form role="form" name="noteEdit" editable-field-container>
 
-        <div class="form-group">
-          <label class="sr-only" for="noteKeywords">keywords</label>
-          <input type="text" class="simple-input" id="noteKeywords" ng-model="newKeyword.title" placeholder="keywords..." maxlength="128" editable-field autocapitalize="none"/>
-        </div>
-
-        <div ng-switch="showKeywords()">
+        <div ng-hide="hideNoteProperties()">
+          <div class="form-group">
+            <label class="sr-only" for="noteKeywords">keywords</label>
+            <input type="text" class="simple-input" id="noteKeywords" ng-model="newKeyword.title" placeholder="keywords..." maxlength="128" editable-field autocapitalize="none"/>
+          </div>
           <div class="keywords-container">
             <span ng-if="showKeywords()" id="new-keyword">
               <button class="small-font button keyword" ng-disabled="isSelectedKeyword()" ng-click="selectNewKeyword()">
@@ -155,25 +160,23 @@
             </span>
           </div>
 
+          <div ng-if="showKeywords()" class="keywords-container">
+            <button ng-hide="isNewKeyword(keyword)" ng-repeat="keyword in otherThanNoteKeywords() | filter: {title: newKeyword.title}" ng-click="selectExistingKeyword(keyword)" class="button small-font keyword">
+              {{keyword.title}} <strong>+</strong>
+            </button>
+          </div>
+
           <div class="form-group">
             <label class="sr-only" for="noteList">list</label>
             <select id="noteList" class="simple-input swiper-no-swiping" ng-model="note.relationships.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions" editable-field>
               <option value="">select list...</option>
             </select>
           </div>
-
-          <div ng-switch-default class="form-group" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
-            <label class="sr-only" for="noteContent">content</label>
-            <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteContent" ng-model="note.content" placeholder="content..." msd-elastic editable-field></textarea>
-          </div>
-
-          <div ng-switch-when="true" class="keywords-container">
-            <button ng-hide="isNewKeyword(keyword)" ng-repeat="keyword in otherThanNoteKeywords() | filter: {title: newKeyword.title}" ng-click="selectExistingKeyword(keyword)" class="button small-font keyword">
-              {{keyword.title}} <strong>+</strong>
-            </button>
-          </div>
         </div>
-
+        <div ng-if="!showKeywords()" id="note-content-container" class="form-group omnibar-scroll-container" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
+          <label class="sr-only" for="noteContent">content</label>
+          <textarea class="simple-input" id="noteContent" ng-model="note.content" placeholder="content..." msd-elastic editable-field ng-focus="noteContentFocus()" ng-blur="noteContentBlur()"></textarea>
+        </div>
       </form>
     </div>
   </div>
