--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -27,7 +27,7 @@
 <body>
 
   <div class="page-header links">
-    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
+    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>log in</b></a>
   </div>
 
   <div class="container">
@@ -47,7 +47,7 @@
           </div>
         </p>
         <p>
-          <a href="https://ext.md/launch" class="button"><span>sign up now</span></a><br/>
+          <a href="https://ext.md/launch" class="button"><span>sign up for beta now</span></a><br/>
         </p>
         <p class="first-paragraph">
           extended mind is a productivity app that helps
@@ -177,7 +177,7 @@
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
-        <a href="https://ext.md/launch" class="button"><span>sign up now</span></a><br/>
+        <a href="https://ext.md/launch" class="button"><span>sign up for beta now</span></a><br/>
         </p>
       </div>
     </div>
@@ -186,7 +186,7 @@
 
     <div class="row">
       <div class="col-md-12 lean-center links">
-        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
+        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>log in</b></a>
       </div>
     </div>
 
