--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -36,6 +36,11 @@
               <span class="link-title">no list</span><span class="icon-arrow-right"></span>
             </a>
           </h3>
+          <h3 class="arrow-link">
+            <a href class="click-to-slide" swiper-click="showNoDateTasksDetails()">
+              <span class="link-title">no date</span><span class="icon-arrow-right"></span>
+            </a>
+          </h3>
         </section>
       </div>
     </div>
