--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -27,7 +27,13 @@
   <div ng-switch-when="task">
     <div class="swiper-no-swiping item-actions"  data-snap-ignore="true" ng-init="openSnooze = {isOpen: false}">
       <div ng-if="openSnooze.isOpen === false" class="form-group item-actions">
-        <a href class="simple-input default-element" ng-click="openSnooze.isOpen = true">select date...</a>
+        <div ng-if="task.date">
+          <label for="taskDue" class="sr-only">select date...</label>
+          <input type="date" id="taskDue" class="simple-input" ng-model="task.date" ng-click="openSnooze.isOpen=true">
+        </div>
+        <div ng-if="!task.date" class="item-actions">
+          <a href class="simple-input default-element" ng-click="openSnooze.isOpen=true">select date...</a>
+        </div>
       </div>
       <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false" snooze-scroll-to-element="scrollToOpenTitle"></div>
       <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
