refactoring: .small-font -> .font-small

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -10,10 +10,10 @@
             <span ng-if="!isUserVerified" id="email-verification-status">not verified</span>
             <ul class="button-row">
               <li class="button-container left-of-two">
-                <button type="button" class="default-button small-font" ng-click="gotoChangePassword()">change password</button>
+                <button type="button" class="default-button font-small" ng-click="gotoChangePassword()">change password</button>
               </li>
               <li class="button-container right-of-two">
-                <button type="button" class="default-button small-font" ng-click="logout()">logout</button>
+                <button type="button" class="default-button font-small" ng-click="logout()">logout</button>
               </li>
             </ul>
             <div ng-if="isAdmin()">
