--- a/frontend/core/src/main/webapp/static/app/tasks/snooze.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/snooze.html
@@ -1,5 +1,5 @@
 <div>
-  <div ng-if="!openSnooze.pikaday.isVisible" class="small-font">
+  <div ng-if="!openSnooze.pikaday.isVisible" class="font-small">
     <ul class="button-row">
       <li ng-switch="isTaskDateTodayOrLess(task)" class="button-container left-of-three">
         <button ng-switch-when="true" type="button" class="highlighted-button" ng-click="setDateTomorrow(task)">tomorrow</button>
