--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -18,11 +18,11 @@
           </li>
           <li ng-if="showOnboardingCheckbox()">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="showOnboarding" ng-model="settings.showOnboarding" ng-change="onboardingChecked(settings.showOnboarding)"/>
-            <label class="default-element small-font" for="showOnboarding">show onboarding on next login</label>
+            <label class="default-element font-small" for="showOnboarding">show onboarding on next login</label>
           </li>
           <li>
             <input class="input-checkbox" type="checkbox" name="checkbox" id="hideFooter" ng-model="settings.hideFooter" ng-change="hideFooter(settings.hideFooter)"/>
-            <label class="default-element small-font" for="hideFooter">hide footer on mobile</label>
+            <label class="default-element font-small" for="hideFooter">hide footer on mobile</label>
           </li>
         </ul>
       </div>
