refactoring: .smallest-font -> .font-smallest

--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -179,7 +179,7 @@
                 <input type="text" class="simple-input" ng-model="newList.title" placeholder="add list..."/>
               </div>
               <div class="right-button-wrapper item-actions">
-                <a href class="smallest-font add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
+                <a href class="font-smallest add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
               </div>
             </div>
           </div>
