--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -13,7 +13,7 @@
         <input type="text" class="left-input-wrapper simple-input" ng-model="newList.title" placeholder="add list..."/>
       </div>
       <div class="right-button-wrapper item-actions">
-        <a href class="smallest-font add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
+        <a href class="font-smallest add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
       </div>
     </div>
   </div>
