--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -7,9 +7,9 @@
             <div class="inner-page-content-container" accordion>
               <div ng-repeat="item in items">
                 <div accordion-title="item" edit-item="editItem(item)" edit-item-inline="true" edit-item-fields="editItemFields(item)" has-complete="false" toggle-complete></div>
-                <div ng-if="isOpen(item) || isInboxSorting(item)" class="accordion-body" editable-field-container="auto">
+                <div ng-if="isOpen(item) || isInboxSorting(item)" editable-field-container="auto">
                   <div item-core-fields="item" item-core-fields-details="itemDetails"></div>
-                  <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+                  <div ng-include="'static/app/main/itemActions.html'"></div>
                 </div>
               </div>
             </div>
