--- a/frontend/core/src/main/webapp/static/app/main/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/listTasks.html
@@ -6,8 +6,8 @@
           <h3>tasks</h3>
           <div ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
             <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
-              <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+            <div ng-if="isOpen(task)" editable-field-container="auto">
+              <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
             </div>
           </div>
           <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
