--- a/frontend/core/src/main/webapp/static/app/notes/keyword.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keyword.html
@@ -4,8 +4,8 @@
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <div ng-if="keyword" accordion>
           <div accordion-title="keyword" edit-item="editKeyword(keyword)" edit-item-inline="true" edit-item-fields="editKeywordFields(keyword)" bold-title="true" has-complete="false" toggle-complete></div>
-          <div ng-if="isOpen(keyword)" class="accordion-body swiper-no-swiping" editable-field-container="auto">
-            <div class="accordion-inner">
+          <div ng-if="isOpen(keyword)" class="swiper-no-swiping" editable-field-container="auto">
+            <div>
               <div item-core-fields="keyword" item-core-fields-details="keywordDetails"></div>
               <ul class="button-row">
                 <li class="button-container left-of-two border-right">
@@ -27,8 +27,8 @@
                 <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
-            <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
-              <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
+            <div ng-if="isOpen(note)" editable-field-container="auto">
+              <div ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
@@ -42,8 +42,8 @@
                 <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
-            <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
-              <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
+            <div ng-if="isOpen(note)" editable-field-container="auto">
+              <div ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
@@ -57,8 +57,8 @@
                 <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
-            <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
-              <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
+            <div ng-if="isOpen(note)" editable-field-container="auto">
+              <div ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
