--- a/frontend/core/src/main/webapp/static/app/tasks/timeline.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/timeline.html
@@ -15,9 +15,9 @@
                   <div class="inner-page-content-container" accordion>
                     <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                      <div ng-if="isOpen(task)" editable-field-container="auto">
                         <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
-                        <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+                        <div ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
                     <div ng-include="'static/app/tasks/addTask.html'"></div>
