Removed .content-container CSS class from HTML files.

--- a/frontend/core/src/main/webapp/static/app/auth/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/auth/changePassword.html
@@ -4,7 +4,7 @@
       <header class="heading-header">
         <h3>change password</h3>
       </header>
-      <div class="content-container simple-content-container">
+      <div class="simple-content-container">
         <form role="form" id="change_password-form" name="change_passwordForm" novalidate>
 
           <div id="currentPassword" class="form-group">
