--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -1,6 +1,6 @@
 <section id="tasks-context" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('details')" class="content-container page-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('details')" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <div ng-if="context" accordion>
           <div accordion-title="context" edit-item="editContext(context)" edit-item-inline="true" edit-item-fields="editContextFields(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
