--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -1,7 +1,7 @@
 <div class="single-page-container">
   <section id="lists" class="one-column-grid single-page page" snap-drawer-drag="lists" ng-init="newList = {};">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="content-container page-content-container">
+      <div ng-hide="omnibarVisible" class="page-content-container">
         <div class="inner-page-content-container" scroll-to swiper-prevent>
           <ul>
             <li ng-repeat="list in lists">
