--- a/frontend/core/src/main/webapp/static/app/main/listProperties.html
+++ b/frontend/core/src/main/webapp/static/app/main/listProperties.html
@@ -1,6 +1,6 @@
 <section id="list-properties" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('properties')" class="content-container page-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('properties')" class="page-content-container">
       <h3>properties</h3>
       <div editable-field-container>
         <div class="form-group">
