--- a/frontend/core/src/main/webapp/static/app/notes/keyword.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keyword.html
@@ -1,6 +1,6 @@
 <section id="notes-keyword" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('details')" class="content-container page-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('details')" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <div ng-if="keyword" accordion>
           <div accordion-title="keyword" edit-item="editKeyword(keyword)" edit-item-inline="true" edit-item-fields="editKeywordFields(keyword)" bold-title="true" has-complete="false" toggle-complete></div>
