--- a/frontend/core/src/main/webapp/static/app/notes/keywords.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keywords.html
@@ -1,6 +1,6 @@
 <section id="notes-keywords" class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('keywords')" class="content-container page-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('keywords')" class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <section ng-init="newKeyword={title:undefined, tagType:'keyword'}">
           <h3>keywords</h3>
